--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
       </div>
     <div class="row bg-home text-center" id="sectionhome">
-        <div class="d-flex flex-row justify-content-center"><h1 class="main-head">RK JWELLS</h1></div>
+        <div class="ml-auto mr-auto"><h1 class="main-head">RK JWELLS</h1></div>
           <div class="col-12 fixed">
             <nav class="navbar navbar-expand-lg navbar-light bg-white">
                 <a class="navbar-brand text-left" href="#">
